login.css
body::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('assets/kocka-tab.png');
    background-repeat: repeat;
    background-size: 80px;
    opacity: 0.05;
    z-index: -1;
}


.login-container {
    padding: 20px;
}

.login-card {
    background-color: var(--card-bg);
    padding: 40px;
    border-radius: 12px;
    width: 100%;
    max-width: 500px;
    box-shadow: 0 12px 32px rgba(0,0,0,0.1);
}

.login-title {
    font-family: 'DM Sans', sans-serif;
    font-size:  30px;
    font-weight: 700;
    text-align: center;
    margin-bottom: 20px;
    color: var(--dark)
}

.login-input {
    border: 1px solid #e8e8e4;
    border-radius: 8px;
    padding: 10px 16px;
    font-family: 'DM Sans', sans-serif;
    font-size: 0.95rem;
    background: lightgray;
    color: var(--dark);
    width: 100%;
    box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.3);
}

.login-input::placeholder {
    color: #666;
}

.login-input:focus{
    border-color: var(--accent);
    box-shadow: 0 0 0 3px rgba(255, 63, 91, 0.1);
    background: #fff;
}

.login-input:hover {
    background-color: #f8f8f8;
}

.login-forgot {
    display: block;
    text-align: right;
    font-family: 'DM Sans', sans-serif;
    font-size: 16px;
    color: #888888;
    margin-bottom: 10px;
    margin-left: 5px;
}

.login-forgot:hover {
    color: #444444;
}

.login-button{
    background-color: var(--accent);
    color: var(--dark);
    border: none;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    font-family: 'DM Sans', sans-serif;
    font-size: 26px;
    width: 100%;
    margin: 20px 0;
    transition: transform 0.2s, font-weight 0.1s;
}

.login-button:hover {
    font-weight: 700;
    transform: scale(1.02);
    cursor: pointer;
}

.login-signup{
    display: block;
    text-align: center;
    font-family: 'DM Sans', sans-serif;
    font-size: 16px;
    color: var(--dark);
    margin-bottom: 10px;
}

.login-signup:hover {
    color: var(--accent);
    transform: scale(1.05);
}

.login-back {
    padding: 20px;
}

.back-button {
    background-color: lightgray;
    border: none;
    color: #888888;
    padding: 10px 10px;
    font-size: 26px;
    font-family: 'DM Sans', sans-serif;
    border-radius: 5px;
    text-decoration: none;
    transition: transform 0.2s, font-weight 0.1s;
}

.back-button:hover {
    font-weight: 700;
    color: #444444;
    transform: scale(1.05);
    cursor: pointer;
}

